plugins {
	id 'org.springframework.boot' version '2.4.0'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
}

group = 'nr'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '15'
targetCompatibility = '15'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}
compileJava {
    options.compilerArgs += ["--enable-preview"]
}
compileTestJava {
    options.compilerArgs += ["--enable-preview"]
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	implementation 'com.google.guava:guava:26.0-jre'
	implementation 'com.graphql-java:graphql-java-spring-boot-starter-webmvc:1.0'
	implementation 'com.graphql-java-kickstart:altair-spring-boot-starter:8.0.0'
	// implementation 'com.graphql-java-kickstart:graphql-java-tools:6.2.0'
    compile 'com.graphql-java-kickstart:voyager-spring-boot-starter:8.0.0'
}
